// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`正确渲染三种模式下的下拉选择框 1`] = `
.c1 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.6);
  box-sizing: border-box;
  margin: 0px;
  margin-top: -2px;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,-webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  pointer-events: none;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  line-height: 1.15;
  -webkit-transform: translate(0px,24px) scale(1);
  -ms-transform: translate(0px,24px) scale(1);
  transform: translate(0px,24px) scale(1);
  will-change: transform;
  max-width: calc(100% - 24px);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c12 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.6);
  box-sizing: border-box;
  margin: 0px;
  margin-top: -2px;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,-webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  pointer-events: none;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  line-height: 1.15;
  -webkit-transform: translate(12px,20px) scale(1);
  -ms-transform: translate(12px,20px) scale(1);
  transform: translate(12px,20px) scale(1);
  will-change: transform;
  max-width: calc(100% - 24px);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c14 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.6);
  box-sizing: border-box;
  margin: 0px;
  margin-top: -2px;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,-webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  pointer-events: none;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  line-height: 1.15;
  -webkit-transform: translate(14px,20px) scale(1);
  -ms-transform: translate(14px,20px) scale(1);
  transform: translate(14px,20px) scale(1);
  will-change: transform;
  max-width: calc(100% - 24px);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c2 > .sinoui-base-input__input {
  outline: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3.5px 0 4.5px;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c2 > input.sinoui-base-input__input,
.c2 > textarea.sinoui-base-input__input {
  display: block;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
}

.c2 > input.sinoui-base-input__input::-moz-placeholder,
.c2 > textarea.sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input.sinoui-base-input__input::-webkit-input-placeholder,
.c2 > textarea.sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input.sinoui-base-input__input:-ms-input-placeholder,
.c2 > textarea.sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input.sinoui-base-input__input::-ms-clear,
.c2 > textarea.sinoui-base-input__input::-ms-clear {
  display: none;
}

.c2 > input.sinoui-base-input__input:focus,
.c2 > textarea.sinoui-base-input__input:focus {
  outline: 0;
}

.c2 > input.sinoui-base-input__input:invalid,
.c2 > textarea.sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c2.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c2 .sinoui-base-input__clear {
  width: 18px;
}

.c2 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

.c7 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.01em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 2em;
  white-space: nowrap;
  color: rgba(0,0,0,0.6);
  margin-left: 8px;
}

[disabled] > .c6 {
  color: rgba(0,0,0,0.38);
}

.c11 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c13 {
  position: relative;
  background-color: #f5f5f5;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c13 > .sinoui-input-adornment--end {
  margin-right: 12px;
  margin-left: -6px;
}

.c13 > .sinoui-input-adornment--start {
  margin-right: 0px;
  margin-left: 10px;
}

.c13 > .sinoui-input-adornment--start ~ .sinoui-base-input__input {
  margin-left: -6px;
}

.c13 > .sinoui-input-adornment--start.sinoui-input-adornment--text ~ .sinoui-base-input__input,
.c13 > .sinoui-input-adornment--end.sinoui-input-adornment--text {
  margin-left: -12px;
}

.c13 > .sinoui-input-adornment--start,
.c13 > .sinoui-input-adornment--text {
  -webkit-transform: translateY(7.5px);
  -ms-transform: translateY(7.5px);
  transform: translateY(7.5px);
}

.c13 > .sinoui-base-input__input {
  padding: 25.5px 12px 6.5px;
  padding-top: 25.5px;
}

.c13::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c13:hover::before {
  background-color: rgba(0,0,0,0.87);
}

.c13::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c13::before,
.c13::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c13:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 1px;
}

.c13 > .sinoui-input__overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0%;
  left: 0%;
  background-color: rgba(0,0,0,0.87);
  pointer-events: none;
  z-index: 2;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  opacity: 0;
}

.c13:hover > .sinoui-input__overlay {
  opacity: 0.04;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0;
  right: 0;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  pointer-events: none;
  box-sizing: border-box;
}

.c16 > div {
  border: 1px solid currentColor;
  box-sizing: border-box;
  -webkit-transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
}

.c16 > .sinoui-notched-outline__leading {
  border-right: none;
  border-radius: 4px 0 0 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 10px;
}

.c16 > .sinoui-notched-outline__notch {
  border-left: none;
  border-right: none;
  padding: 0 4px;
  box-sizing: content-box;
}

.c16 > .sinoui-notched-outline__trailing {
  border-left: none;
  -webkit-flex: 1 0 10px;
  -ms-flex: 1 0 10px;
  flex: 1 0 10px;
  border-radius: 0 4px 4px 0;
}

.c16.sinoui-notched-outline--notched > .sinoui-notched-outline__notch {
  border-top: none;
}

.c16.sinoui-notched-outline--no-label > .sinoui-notched-outline__notch {
  padding: 0;
}

.c15 {
  position: relative;
  border-radius: 4px;
}

.c15 > .sinoui-notched-outline > div {
  border-color: rgba(0,0,0,0.38);
  border-width: 1px;
}

.c15:hover > .sinoui-notched-outline > div {
  border-color: rgba(0,0,0,0.87);
}

.c15 > .sinoui-base-input__input {
  padding: 16px 14px;
}

.c15 > .sinoui-input-adornment--start {
  margin-left: 14px;
  margin-right: 0px;
}

.c15 > .sinoui-input-adornment--end {
  margin-right: 12px;
  margin-left: -6px;
}

.c15 > .sinoui-input-adornment--start ~ .sinoui-base-input__input {
  margin-left: -8px;
}

.c15 > .sinoui-input-adornment--start.sinoui-input-adornment--text ~ .sinoui-base-input__input,
.c15 > .sinoui-input-adornment--end.sinoui-input-adornment--text {
  margin-left: -14px;
}

.c4 {
  color: rgba(0,0,0,0.87);
}

label ~ .c3 {
  margin-top: 16px;
}

.sinoui-form-item--floating > .sinoui-form-item__content .c3 {
  margin-top: 16px;
}

.c4 > .sinoui-base-input__input {
  padding: 3.5px 0px 4.5px;
}

.c4::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c4:hover::before {
  background-color: rgba(0,0,0,0.87);
}

.c4::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c4::before,
.c4::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c4:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 1px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  position: relative;
}

.c0 .sinoui-focused-visible {
  visibility: hidden;
}

.c0:hover .sinoui-focused-visible {
  visibility: visible;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c8::-moz-focus-inner {
  border-style: none;
}

.c8:hover {
  background-color: rgba(0,0,0,0.04);
}

.c9 {
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-sizing: border-box;
  color: rgba(0,0,0,0.6);
}

.c9:hover {
  background-color: rgba(0,0,0,0.04);
}

.c9 > .sinoui-icon-button__ripple-layout {
  left: 0px;
  top: 0px;
  width: 48px;
  height: 48px;
}

.c9 > .sinoui-icon-button__ripple-layout > .sinoui-icon-button__ripple {
  width: 48px;
  height: 48px;
}

.c9 > .sinoui-icon-button--dense__ripple-layout {
  left: 0px;
  top: 0px;
  width: 32px;
  height: 32px;
}

.c9 > .sinoui-icon-button--dense__ripple-layout > .sinoui-icon-button--dense__ripple {
  width: 32px;
  height: 32px;
}

.c10 {
  padding: 2px;
  width: auto;
  height: auto;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c10 > .sinoui-icon-button__ripple-layout {
  left: 0px;
  top: 0px;
  right: 0px;
  bottom: 0px;
  width: auto;
  height: auto;
}

.c10 > .sinoui-icon-button__ripple-layout > .sinoui-icon-button__ripple {
  width: 100%;
  height: 100%;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-sizing: content-box;
  cursor: inherit;
  width: 0;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

@media (hover:none) {
  .c0:hover .sinoui-focused-visible {
    visibility: hidden;
  }
}

@media (hover:none) {
  .c8:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c9:hover {
    background-color: transparent;
  }
}

<div>
  <div
    className="c0 sinoui-select sinoui-auto-complete sinoui-auto-complete--multiple"
  >
    <label
      className="c1 sinoui-form-label"
    >
      Required
    </label>
    <div
      className="c2 sinoui-base-input c3 c4"
      data-testid="baseInput"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
    >
      <div
        aria-disabled="false"
        aria-haspopup="listbox"
        className="c5 sinoui-select-input sinoui-base-input__input"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        role="button"
        tabIndex={0}
      >
        <span>
          ​
        </span>
      </div>
      <div
        className="c6 c7 sinoui-input-adornment sinoui-input-adornment--end"
      >
        <button
          className="c8 sinoui-base-button c9 sinoui-icon-button c10 sinoui-auto-complete__popup-indicator"
          color="textSecondary"
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="c11 sinoui-svg-icon"
            focusable="false"
            role="presentation"
            size={24}
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c0 sinoui-select sinoui-select--filled sinoui-auto-complete"
  >
    <label
      className="c12 sinoui-form-label"
    >
      Required
    </label>
    <div
      className="c2 sinoui-base-input c13"
      data-testid="baseInput"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
    >
      <div
        aria-disabled="false"
        aria-haspopup="listbox"
        className="c5 sinoui-select-input sinoui-base-input__input"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        role="button"
        tabIndex={0}
      >
        <span>
          ​
        </span>
      </div>
      <div
        className="c6 c7 sinoui-input-adornment sinoui-input-adornment--end"
      >
        <button
          className="c8 sinoui-base-button c9 sinoui-icon-button c10 sinoui-auto-complete__popup-indicator"
          color="textSecondary"
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="c11 sinoui-svg-icon"
            focusable="false"
            role="presentation"
            size={24}
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </button>
      </div>
      <div
        className="sinoui-input__overlay"
      />
    </div>
  </div>
  <div
    className="c0 sinoui-select sinoui-select--outlined sinoui-auto-complete"
  >
    <label
      className="c14 sinoui-form-label"
    >
      Required
    </label>
    <div
      className="c2 sinoui-base-input c15"
      data-testid="baseInput"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
    >
      <div
        aria-disabled="false"
        aria-haspopup="listbox"
        className="c5 sinoui-select-input sinoui-base-input__input"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        role="button"
        tabIndex={0}
      >
        <span>
          ​
        </span>
      </div>
      <div
        className="c6 c7 sinoui-input-adornment sinoui-input-adornment--end"
      >
        <button
          className="c8 sinoui-base-button c9 sinoui-icon-button c10 sinoui-auto-complete__popup-indicator"
          color="textSecondary"
          onClick={[Function]}
          role="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="c11 sinoui-svg-icon"
            focusable="false"
            role="presentation"
            size={24}
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </button>
      </div>
      <div
        className="c16 sinoui-notched-outline sinoui-notched-outline--no-label"
      >
        <div
          className="sinoui-notched-outline__leading"
        />
        <div
          className="sinoui-notched-outline__notch"
          style={
            Object {
              "width": 0,
            }
          }
        />
        <div
          className="sinoui-notched-outline__trailing"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`渲染不可用的下拉框 1`] = `
.c1 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.38);
  box-sizing: border-box;
  margin: 0px;
  margin-top: -2px;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,-webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  pointer-events: none;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  line-height: 1.15;
  -webkit-transform: translate(0px,24px) scale(1);
  -ms-transform: translate(0px,24px) scale(1);
  transform: translate(0px,24px) scale(1);
  will-change: transform;
  max-width: calc(100% - 24px);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  color: rgba(0,0,0,0.38);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c2 > .sinoui-base-input__input {
  outline: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3.5px 0 4.5px;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c2 > input.sinoui-base-input__input,
.c2 > textarea.sinoui-base-input__input {
  display: block;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
}

.c2 > input.sinoui-base-input__input::-moz-placeholder,
.c2 > textarea.sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input.sinoui-base-input__input::-webkit-input-placeholder,
.c2 > textarea.sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input.sinoui-base-input__input:-ms-input-placeholder,
.c2 > textarea.sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c2 > input.sinoui-base-input__input::-ms-clear,
.c2 > textarea.sinoui-base-input__input::-ms-clear {
  display: none;
}

.c2 > input.sinoui-base-input__input:focus,
.c2 > textarea.sinoui-base-input__input:focus {
  outline: 0;
}

.c2 > input.sinoui-base-input__input:invalid,
.c2 > textarea.sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c2.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c2 .sinoui-base-input__clear {
  width: 18px;
}

.c2 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

.c7 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.01em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 2em;
  white-space: nowrap;
  color: rgba(0,0,0,0.6);
  margin-left: 8px;
}

[disabled] > .c6 {
  color: rgba(0,0,0,0.38);
}

.c11 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c4 {
  color: rgba(0,0,0,0.38);
}

label ~ .c3 {
  margin-top: 16px;
}

.sinoui-form-item--floating > .sinoui-form-item__content .c3 {
  margin-top: 16px;
}

.c4 > .sinoui-base-input__input {
  padding: 3.5px 0px 4.5px;
}

.c4::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c4::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c4::before,
.c4::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c4::after {
  display: none;
}

.c4::before {
  background-color: rgba(0,0,0,0.26);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  position: relative;
}

.c0 .sinoui-focused-visible {
  visibility: hidden;
}

.c0:hover .sinoui-focused-visible {
  visibility: visible;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: none;
  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c8::-moz-focus-inner {
  border-style: none;
}

.c8:hover {
  background-color: rgba(0,0,0,0.04);
}

.c9 {
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-sizing: border-box;
  color: rgba(0,0,0,0.38);
}

.c9:hover {
  background-color: rgba(0,0,0,0.04);
}

.c9 > .sinoui-icon-button__ripple-layout {
  left: 0px;
  top: 0px;
  width: 48px;
  height: 48px;
}

.c9 > .sinoui-icon-button__ripple-layout > .sinoui-icon-button__ripple {
  width: 48px;
  height: 48px;
}

.c9 > .sinoui-icon-button--dense__ripple-layout {
  left: 0px;
  top: 0px;
  width: 32px;
  height: 32px;
}

.c9 > .sinoui-icon-button--dense__ripple-layout > .sinoui-icon-button--dense__ripple {
  width: 32px;
  height: 32px;
}

.c10 {
  padding: 2px;
  width: auto;
  height: auto;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c10 > .sinoui-icon-button__ripple-layout {
  left: 0px;
  top: 0px;
  right: 0px;
  bottom: 0px;
  width: auto;
  height: auto;
}

.c10 > .sinoui-icon-button__ripple-layout > .sinoui-icon-button__ripple {
  width: 100%;
  height: 100%;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-sizing: content-box;
  cursor: inherit;
  width: 0;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

@media (hover:none) {
  .c0:hover .sinoui-focused-visible {
    visibility: hidden;
  }
}

@media (hover:none) {
  .c8:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c9:hover {
    background-color: transparent;
  }
}

<div
  className="c0 sinoui-select sinoui-select--disabled sinoui-auto-complete"
  disabled={true}
>
  <label
    className="c1 sinoui-form-label"
    disabled={true}
  >
    Required
  </label>
  <div
    className="c2 sinoui-base-input sinoui-base-input--disabled c3 c4"
    data-testid="baseInput"
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
  >
    <div
      aria-disabled="true"
      aria-haspopup="listbox"
      className="c5 sinoui-select-input sinoui-base-input__input"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      role="button"
    >
      <span>
        ​
      </span>
    </div>
    <div
      className="c6 c7 sinoui-input-adornment sinoui-input-adornment--end"
    >
      <button
        aria-disabled={true}
        className="c8 sinoui-base-button c9 sinoui-icon-button sinoui-icon-button--disabled c10 sinoui-auto-complete__popup-indicator"
        color="actionDisabled"
        disabled={true}
        onClick={[Function]}
        role="button"
        type="button"
      >
        <svg
          aria-hidden="true"
          className="c11 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
